--- a/package.json
+++ b/package.json
@@ -34,5 +34,10 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "@reduxjs/toolkit": "^1.8.5",
+    "react-redux": "^8.0.2",
+    "sass": "^1.54.9"
   }
 }
