--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
   "devDependencies": {
     "@reduxjs/toolkit": "^1.8.5",
     "react-redux": "^8.0.2",
+    "react-router-dom": "^6.4.2",
     "sass": "^1.54.9",
     "uuid": "^9.0.0"
   }
