--- a/package.json
+++ b/package.json
@@ -41,5 +41,6 @@
     "react-router-dom": "^6.4.2",
     "sass": "^1.54.9",
     "uuid": "^9.0.0"
-  }
+  },
+  "homepage": "https://justaskmeeee.github.io/todo-list-react"
 }
